--- a/frontend/src/components/MyReviewsIndex/MyReviewsIndex.css
+++ b/frontend/src/components/MyReviewsIndex/MyReviewsIndex.css
@@ -57,11 +57,6 @@
   padding: 0 5px;
 }
 
-.review-buttons {
-  display: flex;
-  justify-content: center;
-}
-
 .review-button {
   padding: 10px;
   margin: 20px;
@@ -69,6 +64,7 @@
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
   cursor: pointer;
+  font-weight: 600;
 }
 
 .review-button:hover {
