--- a/frontend/src/components/MySpotsIndex/MySpotsIndex.css
+++ b/frontend/src/components/MySpotsIndex/MySpotsIndex.css
@@ -16,8 +16,12 @@
 }
 
 .one-review {
-  margin: 25px 25px;
+  margin: 15px;
+  padding: 20px;
   text-align: center;
+  border: 1px solid rgba(128, 128, 128, 0.347);
+  border-radius: 10px;
+  max-width: 320px;
 }
 
 .my-spots-title {
@@ -61,8 +65,9 @@
 .review-buttons {
   margin-top: 10px;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
+  justify-content: center;
 }
 
 .my-spots-button {
@@ -72,7 +77,8 @@
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
   cursor: pointer;
-  width: 113px;
+  width: 120px;
+  font-weight: 600;
 }
 
 .my-spots-button:hover {
