--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -42,6 +42,8 @@
 }
 
 .host {
+  border: none;
+  background-color: white;
   padding: 12px;
   border-radius: 21px;
   font-weight: 500;
@@ -50,7 +52,8 @@
   font-size: 11pt;
   margin-right: 20px;
   text-decoration: none;
-  color: #333
+  color: #333;
+  cursor: pointer;
 }
 
 .host:hover {
