--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,18 @@ body {
   overflow-y: scroll;
   margin: 100px 0 0 0;
 }
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
