review rerender bug fix

--- a/frontend/src/components/ReviewIndex/ReviewIndex.css
+++ b/frontend/src/components/ReviewIndex/ReviewIndex.css
@@ -13,6 +13,10 @@
   padding: 10px 0px;
 }
 
+.review-description {
+  /* overflow-wrap: break-word; */
+}
+
 .reviews-header {
   margin-top: 20px;
   display: flex;
