--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,7 +1,7 @@
 .modal2 {
   height: 930px;
-  width: 570px;
-  max-height: 90vh;
+  width: 580px;
+  max-height: 93vh;
   overflow: auto;
 }
 
@@ -111,7 +111,7 @@
   padding-left: 10px;
 }
 
-/* .continue {
+.continue {
   position: relative;
   margin-top: 40px;
   height: 50px;
@@ -124,7 +124,7 @@
   background-image: linear-gradient(to right, rgb(228,30,78), rgb(214,5,101));
   cursor: pointer;
   z-index: 1;
-} */
+}
 
 .continue::before {
   border-radius: 10px;
@@ -134,7 +134,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: linear-gradient(to right, rgb(228,30,78), rgba(214, 78, 5, 0.74), rgb(214,5,101));
+  background-image: linear-gradient(to right, rgb(228,30,78), rgba(214, 120, 5, 0.74), rgb(214,5,101));
   z-index: -1;
   transition: opacity 0.5s linear;
   opacity: 0;
