--- a/frontend/src/components/ReviewIndex/ReviewIndex.css
+++ b/frontend/src/components/ReviewIndex/ReviewIndex.css
@@ -1,6 +1,6 @@
 .reviews-section {
   border-top: 1px solid rgba(128, 128, 128, 0.273);
-  height: 500px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.273);
 }
 
 .reviews-div {
