--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -228,9 +228,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .single-spot-subtitle {
+    display: block;
   }
 
   .single-spot {
+    margin: 0;
     text-align: center;
+  }
+
+  .stat-li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .coming-soon {
+    margin: 0;
   }
 }
