console errors handled, single spot page links added

--- a/frontend/src/components/ReviewIndex/ReviewIndex.css
+++ b/frontend/src/components/ReviewIndex/ReviewIndex.css
@@ -39,6 +39,7 @@
   border-radius: 10px;
   border: 1px solid rgba(128, 128, 128, 0.347);
   cursor: pointer;
+  transition: background-color 0.25s ease;
 }
 
 .add-review:hover {
