--- a/frontend/src/components/SpotIndex/SpotIndex.css
+++ b/frontend/src/components/SpotIndex/SpotIndex.css
@@ -13,6 +13,7 @@
   display: grid;
   grid-template-columns: auto auto auto auto auto auto;
   justify-content: space-evenly;
+  padding-top: 30px;
 }
 
 .one-spot {
